# miniml-refenv

./: README.md  dune-project  miniml_refenv.opam
_build/: log
lib/: cekmachine.ml  cekmachine.mli  cesk.ml  cui.ml  cui.mli  dune  evalcommon.ml  evalcommon.mli  evaluator.ml  evaluator.mli  integrationtest.ml  lexer.mll  parser.md  parser.mly  syntax.ml  syntax.mli  typechecker.ml  typechecker.mli
sample/: eta.txt  gib.txt  guarded_div.sml  letcs.sml  letcs.txt  letcs2.txt  letcs3.txt  letcs4_fail.sml  nesterename.sml  run_time_eval.sml  scope_extrusion_avoid1.sml  scope_extrusion_avoid1.txt  scope_extrusion_avoid2.txt  scope_extrusion_avoid3.sml  scope_extrusion_avoid3.txt  spower.txt  spower_mono.sml  spower_opt.sml  spower_opt.txt  spower_sq.txt
sample/meta-talk/: 01-basic.rec  01-basic.sml  01-basic.txt  02-ordering.sml  02-ordering.txt  03-spower_mono.rec  03-spower_mono.sml  03-spower_mono.txt  04-spower_fail.rec  04-spower_fail.sml  05-polycls.rec  05-polycls.sml  05-polycls.txt  06-unqfail.rec  06-unqfail.sml  06-unqfail.txt  07-eta.rec  08-run.rec  08-run.sml  09-run-csp.rec  09-run-csp.sml  09-run-csp.txt  1-genplus.rec  10-generic-csp-fail.rec  10-generic-csp-fail.sml  11-letcs.rec  11-letcs.sml  11-letcs.txt  12-mutable-state-fail.txt  2-spower_mono.rec  3-spower_mono.rec  4-spower.rec  5-eta.rec  6-spower_run.rec  7-spower_sq.rec  8-spower_sq_letcs.rec  9-mutable-state-fail.rec
test/: dune
